# causal_interference_study

./: LICENSE  README.md
src/: .pre-commit-config.yaml  constants.py  pyproject.toml
src/data_generation/: corrupt_network.py  data_generator_main.py  data_simulator.py  network_generator.py  readme.md
src/data_results/: 01_01_all_results_.csv  01_01_random_results_part1.csv  01_01_random_results_part2.csv  02_01_corrupt_df.csv  03_01_observational_df.csv
src/methods/: methods_est.py  readme.md  visualization.py
src/notebooks/: 01_01_random_dgp.ipynb  01_02_random_results.ipynb  02_01_partial_obs_dgp.ipynb  02_02_partial_obs_results.ipynb  03_01_observational_dgp.ipynb  03_02_observational_results.ipynb  network_example.ipynb
src/utils/: saving_results.py  warnings.py
src/visualization_results/: watts_strogatz_graph_random_0.3_0.3.png~merged  watts_strogatz_graph_random_0.6_0.3.png~merged
