[tool.poetry]
name = "simulations-notebooks"
version = "0.10"
description = "Network effect in observational studies estimation"
authors = ["polina.revina"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^1.24"
networkx = "^3.3"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
pymatch = "^0.3.4"
tqdm = "^4.67.1"
joblib = "^1.4.2"
pydantic-settings = "^2.7.1"
logging = "^0.4.9.6"
fastparquet = "^2024.11.0"
statsmodels = "^0.14.4"
tabulate = "^0.9.0"
python-louvain = "^0.16"
leidenalg = "^0.10.2"
scikit-learn = "^1.6.1"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
